--- a/menu.html
+++ b/menu.html
@@ -12,17 +12,30 @@
     </header>
 
     <div class="caixa">
-        <h2>Italo 👦</h2>
-        <a href="italo.html">
-            <img src="" alt="Ítalo">
-        </a>
+        <h2>Italo 🏴‍☠️</h2>
+            <img src="ImgeVideo/surfEU.jpg" alt="Italo">
+
+                <div class="hobs">
+                    <ul>
+                        <li style="color: aqua;"><a href="Surfar.html">Surfar</a></li>
+                        <li style="color: aqua;"><a href="msc.html">Ouvir Musica</a></li>
+                        <li style="color: aqua;"><a href="codar.html">Programar</a></li>
+                    </ul>
+                </div>
     </div>
 
     <div class="caixa">
-        <h2>Bianca 👧</h2>
-        <a href="bianca.html">
-            <img src="" alt="Bianca">
-        </a>
+        <h2>Bianca 🏳‍🌈</h2>
+            <img src="ImgeVideo/Mídia.jpg" alt="Bianca">
+
+                <div class="hobs">
+                    <ul>
+                        <li style="color: aqua;"><a href="Ler.html">Ler</a></li>
+                        <li style="color: aqua;"><a href="pintar.html">Pintar</a></li>
+                        <li style="color: aqua;"><a href="escrever.html">Escrever</a></li>
+                    </ul>
+                </div>
     </div>
+   
 </body>
 </html>
