--- a/Ler.html
+++ b/Ler.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bianca</title>
+    <title>Ler</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body style="background-color: rgba(59, 50, 1, 0.63);">
+    <header>
+        <h1>Ler é muito <strong>importante</strong></h1>
+        <br><hr><br>
+
+        <p>A leitura é uma dádiva que nos permite viajar por mundos distantes sem sair do lugar. Cada página aberta é uma porta para novos horizontes, onde personagens ganham vida e sentimentos são despertados. Ao ler, descobrimos mais sobre nós mesmos e sobre o mundo ao nosso redor.</p>
+        <p>Mais do que transmitir conhecimento, a leitura toca o coração. Ela é um encontro silencioso entre quem escreve e quem lê, carregado de emoção e sensibilidade. Muitas vezes, um simples trecho pode aquecer a alma ou oferecer esperança em momentos difíceis.</p>
+        <p>Por isso, ler não é apenas um hábito, mas um gesto de amor e conexão. A cada livro, ampliamos nossa visão de mundo e cultivamos empatia. A leitura é um abraço feito de palavras, capaz de transformar e deixar marcas profundas em nossa vida.</p>
+    </header>
+
     <main>
-        <div class="hobsB">
-            <ol>
-                <li>Ler</li>
-                <li>Escrever</li>
-                <li>Pintar</li>
-            </ol>
-        </div>
+            <img class="imgL" src="ImgeVideo/ler.jpg" alt="ler1">
     </main>
-    
+
     <footer>
         <div class="return">
             <a href="menu.html">Voltar ao menu</a>
-        </div>    
+        </div>
     </footer>
 </body>
 </html>
