--- a/Surfar.html
+++ b/Surfar.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surfar</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/SURFAR.CSS">
+     <link rel="stylesheet" href="css/style.cs">
+
+    
 </head>
 <body style="background-color: rgba(72, 144, 202, 0.63);">
     <header>
@@ -20,8 +23,8 @@
     </header>
 
     <main>
-        <img class="img2" src="ImgeVideo/newboard.jpg" alt="eu apanhando">
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/watch?v=jpL1ZCs2_-w" frameborder="0" allowfullscreen></iframe>
+        <img class="imgL" src="ImgEVideo/newboard.jpg" alt="newboard">
+        <iframe class="imgR" width="560" height="315" src="https://www.youtube.com/embed/Sma8PuQqnKA?autoplay=1" allow="autoplay" allowfullscreen></iframe>
     </main>
 
     <footer>
