--- a/codar.html
+++ b/codar.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programar</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/codar.css">
+        
 </head>
 <body style="background-color: rgba(31, 1, 59, 0.63);">
     <header>
@@ -18,7 +20,7 @@
     </header>
 
     <main>
-            <img class="img2" src="ImgeVideo/Imagem do WhatsApp de 2025-08-25 à(s) 22.24.43_9045e757.jpg" alt="eu apanhando">
+        <img class="imgL" src="ImgeVideo/Imagem do WhatsApp de 2025-08-25 à(s) 22.24.43_9045e757.jpg" alt="eu apanhando">
     </main>
 
     <footer>
