--- a/menu.html
+++ b/menu.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Escolha de Hobbies</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Escolha de Hobbies</title>
+  
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-    <header>
-        <h1>Escolha de Hobbies</h1>
-        <p>Clique em quem você quer conhecer os hobbies:</p>
-    </header>
+<body style="background-color: rgba(41, 36, 36, 0.445);">
+  <header>
+    <h1>Escolha de Hobbies</h1>
+    <p>Clique em quem você quer conhecer os hobbies:</p>
+  </header>
 
-    <div class="caixa">
-        <h2>Italo 🏴‍☠️</h2>
-            <img src="ImgeVideo/surfEU.jpg" alt="Italo">
 
-                <div class="hobs">
-                    <ul>
-                        <li style="color: aqua;"><a href="Surfar.html">Surfar</a></li>
-                        <li style="color: aqua;"><a href="msc.html">Ouvir Musica</a></li>
-                        <li style="color: aqua;"><a href="codar.html">Programar</a></li>
-                    </ul>
-                </div>
+  <div class="caixa">
+    <h2>Italo 🥇</h2>
+    <a href="https://www.instagram.com/italox_013" target="_blank">
+      <img src="ImgeVideo/surfEU.jpg" alt="Italo" />
+    </a>
+    <div class="hobs">
+      <ul>
+        <li><a href="Surfar.html">🌊 Surfar</a></li>
+        <li><a href="msc.html">🎵 Ouvir Música</a></li>
+        <li><a href="codar.html">💻 Programar</a></li>
+      </ul>
     </div>
+  </div>
 
-    <div class="caixa">
-        <h2>Bianca 🏳‍🌈</h2>
-            <img src="ImgeVideo/Mídia.jpg" alt="Bianca">
 
-                <div class="hobs">
-                    <ul>
-                        <li style="color: aqua;"><a href="Ler.html">Ler</a></li>
-                        <li style="color: aqua;"><a href="pintar.html">Pintar</a></li>
-                        <li style="color: aqua;"><a href="escrever.html">Escrever</a></li>
-                    </ul>
-                </div>
+  <div class="caixa">
+    <h2>Bianca 🥈</h2>
+    <img src="ImgeVideo/Mídia.jpg" alt="Bianca" />
+    <div class="hobs">
+      <ul>
+        <li><a href="Ler.html">📖 Ler</a></li>
+        <li><a href="pintar.html">🎨 Pintar</a></li>
+        <li><a href="escrever.html">✍️ Escrever</a></li>
+      </ul>
     </div>
-   
+  </div>
 </body>
 </html>
