pequeno ajuste, pronto

--- a/escrever.html
+++ b/escrever.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: rgba(53, 87, 77, 0.63);">
     <header>
-        <h1>Pintar é <strong>terapeutico</strong></h1>
+        <h1>Escrever é <strong>terapeutico</strong></h1>
         <br><hr><br>
         <p>Escrever é mais do que alinhar palavras — é dar forma ao que sentimos e pensamos. Cada frase guarda um pedaço de nós, transformando emoções em registros que resistem ao tempo.</p>
 
