--- a/codar.html
+++ b/codar.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color: rgba(31, 1, 59, 0.63);">
     <header>
-        <h1>Programar é muito massa</h1>
+        <h1>Programar é muito <strong>massa</strong></h1>
         <br><hr><br>
         <p>Programar é dar vida ao invisível. É transformar ideias em realidade, usando apenas lógica, criatividade e uma linguagem que, aos olhos de muitos, parece fria — mas que, para quem a entende, carrega emoção. É uma forma silenciosa de criar, um jeito de expressar pensamentos e soluções sem precisar dizer uma palavra. Quando tudo funciona, o sentimento é parecido com compor uma música ou terminar um quadro: uma mistura de orgulho e encantamento.</p>
 
